--- a/variables.scss
+++ b/variables.scss
@@ -8,6 +8,7 @@ $skill-tag-background: rgb(60, 51, 42);
 $seperator: rgb(72, 70, 66);
 
 $about-btn-color: rgb(80, 64, 53);
+$about-btn-hover: rgb(105, 92, 83);
 $about-drop-color: rgb(31, 28, 26);
 $navbar-color: rgb(65, 56, 49);
 
