--- a/layout/_navigation.scss
+++ b/layout/_navigation.scss
@@ -28,11 +28,31 @@
         align-items: center;
         right: 1px;
         
-
         .nav__nav-link{
+            display: inline-block;
+            position: relative;
             color: $text-color;
             padding: .5rem;
             font-size: 1rem;
+            display: inline-block;
+        }
+
+        .nav__nav-link:after{
+            background: none repeat scroll 0 0 transparent;
+            bottom: 0;
+            content: "";
+            display: block;
+            height: 2px;
+            left: 50%;
+            position: absolute;
+            background: #fff;
+            transition: width 0.3s ease 0s, left 0.3s ease 0s;
+            width: 0;
+        }
+
+        .nav__nav-link:hover:after{
+            width: 100%; 
+            left: 0; 
         }
 
         a:link{
