--- a/variables.scss
+++ b/variables.scss
@@ -1,6 +1,7 @@
 $background-color: rgb(44, 42, 40);
 
 $home-name-color: rgb(212, 187, 121);
+$nav-bar-color: rgb(80, 64, 53);
 
 $projects-background-color: rgb(40, 39, 37);
 $projects-item-hover: rgb(74, 71, 66);
