--- a/layout/_navigation.scss
+++ b/layout/_navigation.scss
@@ -7,13 +7,17 @@
     justify-content: space-between;
     width: 100%;
     flex-wrap:nowrap;
-    padding: 1rem 2rem;
+    padding: 2rem;
+    background-color: $projects-background-color;
+    border-radius: 1rem;
+    
 
     .nav__name{
         font-size: 2rem;
         color: white;
         font-weight: 200;
         display: inline-block;
+        padding-left: 2rem;
     
         .nav__name-alt{
             display: inline-block;
@@ -27,6 +31,7 @@
         justify-content: space-evenly;
         align-items: center;
         right: 1px;
+        padding-right: 2rem;
         
         .nav__nav-link{
             display: inline-block;
