--- a/style.css
+++ b/style.css
@@ -5,13 +5,16 @@
   justify-content: space-between;
   width: 100%;
   flex-wrap: nowrap;
-  padding: 1rem 2rem;
+  padding: 2rem;
+  background-color: rgb(40, 39, 37);
+  border-radius: 1rem;
 }
 .nav .nav__name {
   font-size: 2rem;
   color: white;
   font-weight: 200;
   display: inline-block;
+  padding-left: 2rem;
 }
 .nav .nav__name .nav__name-alt {
   display: inline-block;
@@ -23,6 +26,7 @@
   justify-content: space-evenly;
   align-items: center;
   right: 1px;
+  padding-right: 2rem;
 }
 .nav .nav__nav-links .nav__nav-link {
   display: inline-block;
@@ -343,6 +347,7 @@
 }
 .footer__bar .footer__icons a:hover {
   transform: scale(1.2);
+  transition: ease-in 0.3s;
 }
 
 * {
@@ -368,6 +373,7 @@ html {
   align-items: center;
   padding-left: 6%;
   padding-right: 6%;
+  margin-top: 1rem;
 }
 
 @media screen and (min-width: 360px) {
