--- a/layout/_footer.scss
+++ b/layout/_footer.scss
@@ -15,7 +15,7 @@
 
         a:hover{
             transform: scale(1.2);
-            transition: ease-in 0.3s;
+            transition: ease-in-out 0.1s;
         }
     }
 
