--- a/variables.scss
+++ b/variables.scss
@@ -5,6 +5,7 @@ $nav-bar-color: rgb(80, 64, 53);
 
 $projects-background-color: rgb(40, 39, 37);
 $projects-item-hover: rgb(74, 71, 66);
+$projects-icon-hover: rgba(138, 138, 138, 0.754);
 $skill-tag-background: rgb(60, 51, 42);
 $seperator: rgb(72, 70, 66);
 
