--- a/layout/_footer.scss
+++ b/layout/_footer.scss
@@ -2,12 +2,12 @@
 
 .footer__bar{
     align-items: center;
-    padding: 2rem;
     
     .footer__icons{
         display: flex;
         flex-direction: row;
         align-items: center;
+        justify-content: center;
         font-size: 1.5rem;
         gap: 1rem;
         
@@ -17,6 +17,17 @@
             transform: scale(1.2);
             transition: ease-in-out 0.1s;
         }
+    }
+
+    .footer__copyright{
+        margin-top: 5rem;
+        margin-bottom: 1rem;
+        padding: 3rem;
+        text-align: center;
+        position: relative;
+        width: 85vw;
+        border-radius: 1rem;
+        background-color: $projects-background-color;
     }
 
 }
