--- a/layout/_contact.scss
+++ b/layout/_contact.scss
@@ -11,6 +11,26 @@
         margin-bottom: 1rem;
         padding-left: 0.25rem;
         text-align: center;
+        display: inline-block;
+        position: relative;
+    }
+
+    .contact__title:after{
+        background: none repeat scroll 0 0 transparent;
+        bottom: 0;
+        content: "";
+        display: block;
+        height: 2px;
+        left: 50%;
+        position: absolute;
+        background: #fff;
+        transition: width 0.5s ease 0s, left 0.5s ease 0s;
+        width: 0;
+    }
+
+    .contact__title:hover:after{
+        width: 100%; 
+        left: 0; 
     }
 
     .contact__btn{
