--- a/layout/_contact.scss
+++ b/layout/_contact.scss
@@ -6,7 +6,7 @@
     align-items: center;
 
     .contact__title{
-        font-size: 3.85rem;
+        font-size: 5rem;
         margin-top: 2rem;
         margin-bottom: 1rem;
         padding-left: 0.25rem;
@@ -39,9 +39,9 @@
         border: solid $contact-btn-border;
         margin-bottom: 1.5rem;
         margin-top: 2rem;
-        padding: 1rem 0.25rem;
-        font-family: $font-inter;
-        font-size: large;
+        padding: 1.5rem 2rem;
+        font-family: $font-cormorant;
+        font-size: 2rem;
         text-align: center;
         width: 10rem;
         text-decoration: none;
