--- a/layout/_projects.scss
+++ b/layout/_projects.scss
@@ -9,7 +9,7 @@
         .projects__title{
             padding-left: 1.5rem;
             padding-top: 1rem;
-            font-size: 3.25rem;
+            font-size: 4rem;
             font-weight: 400;
         }
 
@@ -24,7 +24,7 @@
             flex-direction: column;
             justify-content: space-evenly;
             justify-items: center;
-            align-items: center;
+            align-items: start;
             width: 100%;
 
             .projects__grid-item{
