--- a/layout/_footer.scss
+++ b/layout/_footer.scss
@@ -8,7 +8,7 @@
         flex-direction: row;
         align-items: center;
         justify-content: center;
-        font-size: 1.5rem;
+        font-size: 2rem;
         gap: 1rem;
         
         a:visited{color: white;}
@@ -21,8 +21,8 @@
 
     .footer__copyright{
         margin-top: 5rem;
-        margin-bottom: 1rem;
-        padding: 3rem;
+        margin-bottom: 2rem;
+        padding: 3rem 0rem 3rem ;
         text-align: center;
         position: relative;
         width: 85vw;
