--- a/layout/_navigation.scss
+++ b/layout/_navigation.scss
@@ -3,22 +3,27 @@
 .nav{
     align-items: center;
     display: flex;
-    flex-direction: column column;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: space-around;
     width: 100%;
     flex-wrap:nowrap;
-    padding: 2rem;
+    padding: 0.5rem;
     background-color: $projects-background-color;
     border-radius: 1rem;
     margin-top: 1rem;
-    
 
+    #seperator{
+        width: 80%;
+        background-color: $seperator;
+        margin-bottom: .25rem;
+    }
+    
     .nav__name{
-        font-size: 2rem;
         color: white;
+        font-size: 2rem;
+        text-align: center;
         font-weight: 200;
-        display: inline-block;
-        padding-left: 2rem;
+        padding: 1rem;
     
         .nav__name-alt{
             display: inline-block;
@@ -43,19 +48,15 @@
     }
 
     .nav__nav-links{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        align-items: center;
-        right: 1px;
-        padding-right: 2rem;
-        
+        display: inline-block;
+        margin-bottom: 0.5rem;
+    
         .nav__nav-link{
             display: inline-block;
             position: relative;
             color: $text-color;
             padding: .5rem;
-            font-size: 1.5rem;
+            font-size: 1rem;
         }
 
         .nav__nav-link:after{
@@ -78,6 +79,40 @@
 
         a:link{
             text-decoration: none;
+        }
+    }
+}
+
+@media screen and (min-width: 768px){
+    .nav{
+        padding: 2rem 0rem 2rem;
+        justify-content: space-between;
+        flex-direction: row;
+
+        #seperator{
+            display: none;
+        }
+
+        .nav__name{
+            font-size: 2rem;
+            color: white;
+            font-weight: 200;
+            display: inline-block;
+            padding-left: 2rem;
+        }
+
+        .nav__nav-links{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            align-items: center;
+            right: 1px;
+            padding-right: 2rem;
+            margin: 0;
+
+            .nav__nav-link{
+                font-size: 1.5rem;
+            }
         }
     }
 }
