improved contact section

--- a/layout/_contact.scss
+++ b/layout/_contact.scss
@@ -4,12 +4,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 2rem;
 
     .contact__title{
         font-size: 5rem;
-        margin-top: 2rem;
-        margin-bottom: 1rem;
-        padding-left: 0.25rem;
+        margin: 2rem 0rem 1rem;
+        padding-bottom:  1rem;
         text-align: center;
         display: inline-block;
         position: relative;
@@ -17,10 +17,10 @@
 
     .contact__title:after{
         background: none repeat scroll 0 0 transparent;
-        bottom: 0;
+        bottom: 5rem;
         content: "";
         display: block;
-        height: 2px;
+        height: 0.125rem;
         left: 50%;
         position: absolute;
         background: #fff;
@@ -53,9 +53,20 @@
         transition: ease-in 0.25s;
     }
 
-    .contact__email{
-        font-family: $font-inter;
-        padding-top: 1rem;
+    .contact__icons{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        font-size: 2rem;
+        margin-top: 2rem;
+        gap: 1rem;
+        
+        a:visited{color: white;}
+
+        a:hover{
+            transform: scale(1.2);
+            transition: ease-in-out 0.1s;
+        }
     }
-    
 }
