--- a/layout/_projects.scss
+++ b/layout/_projects.scss
@@ -25,6 +25,7 @@
             justify-content: space-evenly;
             justify-items: center;
             align-items: start;
+            margin-top: 3rem;
             width: 100%;
 
             .projects__grid-item{
